RESOLVED FIXED201922
WebStorageNamespaceProvider / StorageNamespaceImpl no longer need SessionIDs
https://bugs.webkit.org/show_bug.cgi?id=201922
Summary WebStorageNamespaceProvider / StorageNamespaceImpl no longer need SessionIDs
Chris Dumez
Reported 2019-09-18 10:59:24 PDT
WebStorageNamespaceProvider / StorageNamespaceImpl no longer need SessionIDs, now that we have a single session per WebProcess.
Attachments
Patch (13.43 KB, patch)
2019-09-18 11:00 PDT, Chris Dumez
no flags
Patch (1.66 KB, patch)
2019-09-19 13:43 PDT, Yury Semikhatsky
no flags
Patch (20.16 KB, text/plain)
2019-09-24 11:39 PDT, Yury Semikhatsky
no flags
Chris Dumez
Comment 1 2019-09-18 11:00:18 PDT
Chris Dumez
Comment 2 2019-09-18 19:30:24 PDT
This patch is ready for review.
Geoffrey Garen
Comment 3 2019-09-18 20:03:57 PDT
Comment on attachment 379049 [details] Patch r=me
WebKit Commit Bot
Comment 4 2019-09-18 21:19:05 PDT
Comment on attachment 379049 [details] Patch Clearing flags on attachment: 379049 Committed r250083: <https://trac.webkit.org/changeset/250083>
WebKit Commit Bot
Comment 5 2019-09-18 21:19:07 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2019-09-18 21:20:19 PDT
Yury Semikhatsky
Comment 7 2019-09-19 13:43:38 PDT
Reopening to attach new patch.
Yury Semikhatsky
Comment 8 2019-09-19 13:43:39 PDT
Chris Dumez
Comment 9 2019-09-19 13:56:11 PDT
Comment on attachment 379160 [details] Patch Thanks.
WebKit Commit Bot
Comment 10 2019-09-19 14:46:10 PDT
Comment on attachment 379160 [details] Patch Clearing flags on attachment: 379160 Committed r250106: <https://trac.webkit.org/changeset/250106>
WebKit Commit Bot
Comment 11 2019-09-19 14:46:11 PDT
All reviewed patches have been landed. Closing bug.
Yury Semikhatsky
Comment 12 2019-09-24 11:39:36 PDT
Reopening to attach new patch.
Yury Semikhatsky
Comment 13 2019-09-24 11:39:37 PDT
EWS Watchlist
Comment 14 2019-09-24 11:40:35 PDT
This patch modifies the inspector protocol. Please ensure that any frontend changes appropriately use feature checks for new protocol features.
Yury Semikhatsky
Comment 15 2019-09-24 11:40:50 PDT
Comment on attachment 379461 [details] Patch Wrong but number, sorry for the noise.
Note You need to log in before you can comment on or make changes to this bug.