WebStorageNamespaceProvider / StorageNamespaceImpl no longer need SessionIDs https://bugs.webkit.org/show_bug.cgi?id=201922

Reviewed by Geoffrey Garen.

WebStorageNamespaceProvider / StorageNamespaceImpl no longer need SessionIDs, now that
we have a single session per WebProcess.

* WebProcess/WebStorage/StorageAreaMap.cpp:
(WebKit::StorageAreaMap::connect):
* WebProcess/WebStorage/StorageNamespaceImpl.cpp:
(WebKit::StorageNamespaceImpl::createSessionStorageNamespace):
(WebKit::StorageNamespaceImpl::createLocalStorageNamespace):
(WebKit::StorageNamespaceImpl::createTransientLocalStorageNamespace):
(WebKit::StorageNamespaceImpl::StorageNamespaceImpl):
(WebKit::StorageNamespaceImpl::sessionID const):
(WebKit::StorageNamespaceImpl::copy):
* WebProcess/WebStorage/StorageNamespaceImpl.h:
(): Deleted.
* WebProcess/WebStorage/WebStorageNamespaceProvider.cpp:
(WebKit::WebStorageNamespaceProvider::createSessionStorageNamespace):
(WebKit::WebStorageNamespaceProvider::createLocalStorageNamespace):
(WebKit::WebStorageNamespaceProvider::createTransientLocalStorageNamespace):


Canonical link: https://commits.webkit.org/215600@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250083 268f45cc-cd09-0410-ab3c-d52691b4dbfc